@@ -139,3 +139,4 @@
 ./images/index.php
 ./output/index.php
 ./configs/index.php
+./lib/index.php
